# controllers/artistaController.js
@@ -1,15 +1,25 @@
+const { getAvailableLetters } = require('../helpers/getAvailableLetters');
 const Artista = require('../models/artista');
 
 const findArtista = async(req, res) => {
-    let artistaId = req.params.id;
+    let artistaId = Number(req.params.id);
 
     try {
-        let artista = await Artista.findOne({ publicId: Number(artistaId) });
+        let artista = await Artista.findOne({ publicId: artistaId });
         
-        if(artista == {}) {
-            res.status(404).send({ msg: 'Artista não encontrado.'})
+        const [previousArtist] = await Artista.find({publicId: {$gt: artistaId}}).sort({ name: 1 }).limit(1);
+        const [nextArtist] = await Artista.find({publicId: {$lt: artistaId}}).sort({ name: -1 }).limit(1);
+
+        if(artista) {
+            res.status(200).send({
+                artista,
+                navigation: {
+                    previous: previousArtist ? previousArtist.publicId : 1,
+                    next: nextArtist ? nextArtist.publicId : artistaId + 1,
+                }
+            });
         } else {
-            res.status(200).send(artista);
+            res.status(400).send({ msg: 'Artista não encontrado.'})
         }
     } catch(err) {
         console.error(`Houve um erro ao buscar artista: ${err}`)
@@ -17,23 +27,28 @@ const findArtista = async(req, res) => {
     }
 }
 
-const getAllArtistas = async(req, res) => {
-    const { page = 1, limit = 12 } = req.query;
+const getArtists = async(req, res) => {
+    const { page, limit = 12, search = '', getAll = false } = req.query;
+    const searchQuery = search !== '' ? { nome: { $regex: '^' + search, $options: 'i'} } : {};
+
+    let allArtistas, paginatedArtistas, estimatedCount, publicIds;
 
     try {
-        let artistas = await Artista.find().sort({ nome: 1 }).limit(limit * 1).skip((page - 1) * limit).exec();
+        allArtistas = await Artista.find().sort({ nome: 1 }).exec();
+        paginatedArtistas = await Artista.find(searchQuery).sort({ nome: 1 }).limit(limit * 1).skip((page - 1) * limit).exec();
 
-        // let orderedArtists = artistas.sort((a, b) => a.nome.localeCompare(b.nome, 'en'));
+        estimatedCount = search !== '' ? paginatedArtistas.length : await Artista.countDocuments();
+        publicIds = allArtistas.map(artista => artista.publicId);
 
-        let estimatedCount = await Artista.countDocuments();
-        
-        if(artistas == []) {
-            res.status(404).send({ msg: 'Nenhum artista encontrado.'})
+        if(allArtistas == [] || paginatedArtistas == []) {
+            res.status(204).send({ msg: 'Nenhum artista encontrado.'})
         } else {
             res.status(200).send({ 
                 count: estimatedCount,
                 totalPages: Math.round(estimatedCount / 12),
-                artists: artistas
+                availableLetters: getAvailableLetters(allArtistas),
+                artists: getAll ? allArtistas : paginatedArtistas,
+                allIds: publicIds,
             });
         }
     } catch(err) {
@@ -53,16 +68,24 @@ const addArtista = async(req, res) => {
     });
 }
 
-const editArtista = (req, res) => {
-    res.send(`Artista do id ${req.params.id} foi editado.`);
+const editArtista = async(req, res) => {
+    const editedArtist = await Artista.findOneAndUpdate({ publicId: req.params.id }, req.body, { new: true }, (err, doc) => {
+        if(err) res.status(400).send({ msg: err });
+    });
+
+    res.status(200).send({ artist: editedArtist });
 }
 
-const deleteArtista = (req, res) => {
-    res.send(`Artista do id ${req.params.id} foi deletado.`);
+const deleteArtista = async(req, res) => {
+    await Artista.findOneAndDelete({ publicId: req.params.id }).then(res => {
+        res.status(200).send(`Artista do id ${req.params.id} foi deletado com sucesso.`);
+    }).catch(err => {
+        res.status(500).send(`Algo deu errado: ${err}`);
+    });
 }
 
 module.exports = {
-    getAllArtistas,
+    getArtists,
     findArtista,
     addArtista,
     editArtista,
